--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ ul {
 
 .first-title {
     font-size: 48px;
-    font-weight: 700;
+    font-weight: 900;
     color: #f9faf8;
 }
 
@@ -68,6 +68,36 @@ button {
     width: 450px;
 }
 
+
+/* some random information section */
+
 .container {
     background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    padding: 50px;
+}
+
+.second-title {
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+}
+
+.container img {
+    display: flex;
+    height: 100px;
+    width: 150px;
+    border-radius: 10px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px;
 }
