--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,7 @@ button {
     height: 100px;
     width: 150px;
     border-radius: 10px;
+    border: #3882f6;
 }
 
 .card {
@@ -100,4 +101,8 @@ button {
     flex-direction: column;
     align-items: center;
     width: 150px;
+}
+
+.card p {
+    justify-content: center;
 }
