--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0px;
     box-sizing: border-box;
-    /* background-color: #1f2937; */
   }
 
 .header {
@@ -13,7 +12,6 @@
     align-items: center;
     background-color: #1f2937;
     padding: 0 80px;
-
 }
 
 ul {
@@ -56,22 +54,24 @@ ul {
 } */
 
 .text {
-    padding-bottom: 5px;
+    padding-bottom: 10px;
 }
+
 button {
     color: #f9faf8;
     background-color: #3882f6;
-    border-radius: 50px;
-    padding: 10px 20px;
+    border-radius: 10px;
+    padding: 6px;
     width: 25%;
     flex-shrink: 0;
+    font-weight: bold;
 }
 
 .first-image {
     width: 450px;
 }
 
-/* some random information section */
+/* ssecond section */
 
 .second {
     padding: 15px 15px;
@@ -84,6 +84,7 @@ button {
     justify-content: center;
     gap: 15px;
     padding: 50px;
+    text-align: center;
 }
 
 .second-title {
@@ -109,7 +110,7 @@ button {
     width: 150px;
 }
 
-/* inspirational quote section */
+/* third section */
 
 .third {
     background-color: #e5e7eb;
@@ -132,4 +133,34 @@ button {
     justify-content: flex-end;
     padding-right: 150px;
     padding-top: 10px;
+}
+
+/* forth section */
+
+.fourth {
+    padding: 100px 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.blue-box {
+    width: 1000px;
+    padding: 30px 80px;
+    border-radius: 5px;
+    background-color: #3882f6;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.action {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.blue-box button {
+    border: 1px solid white;
+    width: auto;
+    padding: 7px 15px;
 }
