--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ ul {
     color: #e5e6eb;
     list-style-type: none;
     display: flex;
-    gap: 8px;
+    gap: 15px;
 }
 
 .first  {
@@ -32,7 +32,7 @@ ul {
 
 .first-title {
     font-size: 48px;
-    font-weight: 900;
+    font-weight: bolder;
     color: #f9faf8;
 }
 
@@ -44,37 +44,27 @@ ul {
     margin-right: 55px;
 }
 
-/* Can't figure out how to get the damn button not to shrink 
-
-.button {
-    display: flex;
-    justify-content: center;
-    flex-shrink: 0;
-    min-width: 25%;
-} */
-
 .text {
     padding-bottom: 10px;
 }
 
 button {
     color: #f9faf8;
+    font-weight: bold;
     background-color: #3882f6;
     border-radius: 10px;
-    padding: 6px;
-    width: 25%;
-    flex-shrink: 0;
-    font-weight: bold;
+    padding: 6px 15px;
+    width: 100px;
 }
 
 .first-image {
     width: 450px;
 }
 
-/* ssecond section */
+/* second section */
 
 .second {
-    padding: 15px 15px;
+    padding: 30px;
 }
 
 .container {
@@ -100,13 +90,10 @@ button {
     height: 100px;
     width: 150px;
     border-radius: 10px;
-    border: #3882f6;
+    border: 3px solid #3882f6;
 }
 
 .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     width: 150px;
 }
 
@@ -114,16 +101,13 @@ button {
 
 .third {
     background-color: #e5e7eb;
-    padding: 100px 100px;
+    padding: 100px 200px;
 }
 
 .quote{
     font-size: 36px;
     font-style: italic;
     color: #6b6b6b;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .author {
@@ -131,7 +115,7 @@ button {
     font-weight: bold;
     display: flex;
     justify-content: flex-end;
-    padding-right: 150px;
+    padding-right: 15px;
     padding-top: 10px;
 }
 
@@ -145,7 +129,7 @@ button {
 
 .blue-box {
     width: 1000px;
-    padding: 30px 80px;
+    padding: 40px 80px;
     border-radius: 5px;
     background-color: #3882f6;
     color: white;
@@ -161,8 +145,6 @@ button {
 
 .blue-box button {
     border: 1px solid white;
-    width: auto;
-    padding: 7px 15px;
 }
 
 /* footer */
