--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ ul {
 
 .first  {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     background-color: #1f2937;
     padding: 50px 80px;
@@ -58,7 +58,7 @@ button {
 }
 
 .first-image {
-    width: 450px;
+    width: 650px;
 }
 
 /* second section */
@@ -70,7 +70,6 @@ button {
 .container {
     background-color: white;
     display: flex;
-    align-items: center;
     justify-content: center;
     gap: 15px;
     padding: 50px;
@@ -87,14 +86,14 @@ button {
 
 .container img {
     display: flex;
-    height: 100px;
-    width: 150px;
+    height: 200px;
+    width: 250px;
     border-radius: 10px;
     border: 3px solid #3882f6;
 }
 
 .card {
-    width: 150px;
+    width: 250px;
 }
 
 /* third section */
@@ -108,14 +107,17 @@ button {
     font-size: 36px;
     font-style: italic;
     color: #6b6b6b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .author {
     font-size: 20px;
     font-weight: bold;
     display: flex;
-    justify-content: flex-end;
-    padding-right: 15px;
+    justify-content: center;
+    padding-left: 500px;
     padding-top: 10px;
 }
 
