--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,13 @@
     padding: 0 80px;
 }
 
+.header img {
+    padding-top: 5px;
+    width: auto;
+    height: 80px;
+    border-radius: 20px;
+}
+
 ul {
     font-size: 18px;
     color: #e5e6eb;
